css: switch to using CSS custom properties
CSS custom properties are wildly popular, and have been supported by
every major browser (except Internet Explorer, but you're not supposed
to use it anymore, even Microsoft says so in
https://blogs.windows.com/windowsexperience/2021/05/19/the-future-of-internet-explorer-on-windows-10-is-in-microsoft-edge/
because Internet Explorer has been unsupported since June 15, 2022).

There is a slight complication here, though: We use the `darken()` and
`lighten()` functions extensively, and they are SASS preprocessor
functions, i.e. they are evaluated at compile time, while the actual CSS
custom properties are evaluated in the browser.

Therefore, we need to move every `darken()`/`lighten()` call into an
individual CSS custom property that is evaluated at compile time.

This is the first step in preparation for supporting dark mode on
https://git-scm.com/.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/downloads.scss
+++ b/assets/sass/downloads.scss
@@ -9,7 +9,7 @@
   p {
     font-size: 12px;
     line-height: 1.4;
-    color: $light-font-color;
+    color: var(--light-font-color);
   }
 
   p + p {
@@ -55,7 +55,7 @@
 
   a {
     display: block;
-    color: $font-color;
+    color: var(--font-color);
     text-align: center;
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -74,7 +74,7 @@
     h3 {
       font-size: 18px;
       font-weight: bold;
-      color: $orange;
+      color: var(--orange);
     }
 
     p {
@@ -89,7 +89,7 @@
     }
 
     h3 {
-      color: darken($orange, 5%);
+      color: var(--orange-darker-5);
     }
   }
 }
@@ -99,7 +99,7 @@
   top: 8px;
   left: 12px;
   display: none;
-  color: $orange;
+  color: var(--orange);
 }
 
 .downloading .hide {
