--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -14,7 +14,7 @@ input.inactive {
 }
 
 input.active {
-  color: $font-color !important;
+  color: var(--font-color) !important;
 }
 
 input, textarea {
@@ -38,7 +38,7 @@ form#search {
   width: 262px;
   padding-left: 32px;
   @include background-image-2x($baseurl + "images/icons/search", 17px, 17px, 10px 50%);
-  background-color: $main-bg !important;
+  background-color: var(--main-bg) !important;
   border: solid 1px #ceccc5;
   @include border-radius(20px);
   @include box-shadow(inset 0 1px 4px #ddd);
@@ -50,7 +50,7 @@ form#search {
     margin-top: 4px;
     margin-bottom: 2px;
     line-height: 1em;
-    color: $font-color;
+    color: var(--font-color);
     background-color: transparent;
     border: 0;
   }
