--- a/assets/sass/lists.scss
+++ b/assets/sass/lists.scss
@@ -27,7 +27,7 @@ ul.gui-thumbnails {
       display: block;
       padding: 3px;
       margin-bottom: 5px;
-      border: solid 1px $base-border-color;
+      border: solid 1px var(--base-border-color);
     }
   }
 }
@@ -96,7 +96,7 @@ ol#about-nav {
       font-size: 13px;
       line-height: 20px;
       text-align: center;
-      color: $font-color;
+      color: var(--font-color);
       opacity: 0.9;
       @include background-image-2x($baseurl + "images/icons/nav-circles", 90px, 180px);
 
@@ -144,14 +144,14 @@ ul.stackoverflow {
 
   span {
     display: block;
-    color: $light-font-color;
+    color: var(--light-font-color);
 
     strong {
-      color: darken($light-font-color, 10%);
+      color: var(--light-font-color-darker-10);
     }
 
     em {
-      color: lighten($light-font-color, 20%);
+      color: var(--light-font-color-lighter-20);
     }
   }
 }
