--- a/assets/sass/search.scss
+++ b/assets/sass/search.scss
@@ -11,7 +11,7 @@
   background: #398a94 url($baseurl + "images/bg/search-header.jpg") 0 1px repeat-x;
   @include border-radius(3px);
   @include box-shadow(0 0 7px rgba(0, 0, 0, 0.25));
-  border-bottom: solid 1px $base-border-color;
+  border-bottom: solid 1px var(--base-border-color);
 
   header {
     height: 44px;
@@ -38,7 +38,7 @@
       width: 67px;
       padding: 10px 12px 0 0;
       font-size: 11px;
-      color: $blue;
+      color: var(--blue);
       text-align: right;
       vertical-align: top;
       background-color: #f5fbfb;
@@ -55,7 +55,7 @@
         padding: 5px 12px;
         margin-bottom: 0;
         font-weight: bold;
-        color: $font-color;
+        color: var(--font-color);
         transition-duration: 0s;
 
         &:hover,
@@ -115,10 +115,10 @@ ol.full-search-results {
     display: block;
     margin-bottom: 0.4em;
     font-size: 12px;
-    color: $light-font-color;
+    color: var(--light-font-color);
 
     &:hover {
-      color: darken($light-font-color, 25%);
+      color: var(--light-font-color-darker-25);
     }
   }
 }
@@ -145,13 +145,13 @@ ol.full-search-results {
 
 // Search results page
 #search-div {
-  border: solid 1px $base-border-color;
-  background: $main-bg;
+  border: solid 1px var(--base-border-color);
+  background: var(--main-bg);
   padding: 22px;
   @include border-radius(5px);
 
   ol {
-    background-color: $callout-color;
+    background-color: var(--callout-color);
     @include border-radius(3px);
     padding: 8px 14px 4px;
     margin: 0 0 1.4em;
@@ -167,16 +167,16 @@ ol.full-search-results {
 
   .pagefind-ui__result-tags {
     list-style: none;
-    color: $light-font-color;
+    color: var(--light-font-color);
     margin-bottom: 1.4em;
     margin-left: 0;
   }
 }
 
 button {
-  border-color: $link-color;
-  color: $link-color;
-  background: $callout-color;
+  border-color: var(--link-color);
+  color: var(--link-color);
+  background: var(--callout-color);
   font-weight: bold;
   @include border-radius(3px);
   outline: none;
