--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -33,6 +33,35 @@
         $main-bg:                 #333333;
         $bg-color:                #2a2a2aff;
         $sidebar-bg-color:        #3d3d3a;
+
+        :root#{$theme} {
+            div#masthead {
+                background: transparent;
+            }
+
+            div#masthead::before {
+                content: "";
+                width: 100%;
+                height: 295px;
+                @include background-image-2x($baseurl + "images/bg/isometric-grid", 35px, 21px, top right, repeat);
+                position: absolute;
+                filter: brightness(.4) contrast(1.6);
+                z-index: -1;
+            }
+
+            img {
+                filter: brightness(.6) contrast(1.2);
+            }
+
+            a.subtle-button {
+                background-image: linear-gradient(#555555, #777777);
+                border-top: solid 1px #333333;
+                border-right: solid 1px #333333;
+                border-bottom: solid 1px #333333;
+                border-left: solid 1px #333333;
+                @include box-shadow(none);
+            }
+        }
     }
 
     :root#{$theme} {
