--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -51,3 +51,28 @@ pre {
 .d-flex{
   display: flex;
 }
+
+#dark-mode-button {
+    display: none;
+    z-index: 10;
+    position: absolute;
+    top: 6px;
+    right: -50px;
+    width: 35px;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+@media (max-width: $default + 100) {
+    #dark-mode-button {
+        top: 41px;
+        right: 5px;
+    }
+}
+
+@media (max-width: $default) {
+    #dark-mode-button {
+        top: 5px;
+        right: 20px;
+    }
+}
