--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,6 +14,7 @@
     document.getElementById('tagline').innerHTML = '--' + tagline;
   </script>
 
+  <img src="{{ relURL "images/dark-mode.svg" }}" id="dark-mode-button" />
   {{ if ne (.Scratch.Get "section") "search" }}
   <form id="search" action="{{ relURL "search/results" }}">
     <input id="search-text" name="search" placeholder="Type / to search entire site…" autocomplete="off" type="text" />
