--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -61,6 +61,11 @@
                 border-left: solid 1px #333333;
                 @include box-shadow(none);
             }
+
+            #documentation #main div.verseblock pre.content {
+                color: var(--light-font-color);
+                background-color: #5e5951;
+            }
         }
     }
 
