dark-mode: replace hard-coded #fff with the `--main-bg` property
This is a step in the right direction, there is one more instance of
`#fff` (active drop-down titles) but it will be handled differently
because `--main-bg` would be too dark.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -57,7 +57,7 @@ form#search {
 
   &.focus {
     border-color: #007175;
-    background-color: #fff;
+    background-color: var(--main-bg);
   }
 }
 
