dark mode: adapt front page
The front page is the first page users see, therefore we need to make
sure that it looks good in dark mode.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -62,6 +62,18 @@
                 @include box-shadow(none);
             }
 
+            #front-nav img {
+                filter: none;
+            }
+
+            div.monitor {
+                filter: brightness(.85);
+            }
+
+            .monitor a {
+                color: #dbd7d7;
+            }
+
             #documentation #main div.verseblock pre.content {
                 color: var(--light-font-color);
                 background-color: #5e5951;
