--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -6,6 +6,7 @@
     $aside-font-color:        lighten($font-color, 20%);
     $light-font-color:        #9a9994;
     $link-color:              #0388a6;
+    $nav-link-color:          #413932;
     $fixed-width-font-color:  #4e443c;
     $button-bg-color:         #dfddd554;
     $button-bg-hover-color:   #fafafae5;
@@ -24,6 +25,7 @@
         $aside-font-color:        darken($font-color, 10%);
         $light-font-color:        #bdbbb0;
         $link-color:              #d7834f;
+        $nav-link-color:          #979594;
         $fixed-width-font-color:  #afa7a0;
         $button-bg-hover-color:   #dfddd599;
         $base-border-color:       #b3b2a7;
@@ -94,6 +96,7 @@
         --light-font-color-darker-55:   #{darken($light-font-color, 55%)};
         --light-font-color-lighter-20:  #{lighten($light-font-color, 20%)};
         --link-color:                   #{$link-color};
+        --nav-link-color:               #{$nav-link-color};
         --link-hover-color:             #{lighten($link-color, 10%)};
         --fixed-width-font-color:       #{$fixed-width-font-color};
         --button-bg-color:              #{$button-bg-color};
