dark mode: make the circled labels in the About section readable
The color contrast was not large enough; Let's just use a different
variable to define the color.

In light mode, it is similar enough: previously it was #4e443c, now it
is #403f3c instead, i.e. a _tad_ darker. But it looks nice.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/lists.scss
+++ b/assets/sass/lists.scss
@@ -96,7 +96,7 @@ ol#about-nav {
       font-size: 13px;
       line-height: 20px;
       text-align: center;
-      color: var(--font-color);
+      color: var(--light-font-color-darker-35);
       opacity: 0.9;
       @include background-image-2x($baseurl + "images/icons/nav-circles", 90px, 180px);
 
