--- a/assets/sass/normalize.scss
+++ b/assets/sass/normalize.scss
@@ -141,8 +141,8 @@ h1 {
  */
 
 mark {
-  background: #ff0;
-  color: #000;
+  background: var(--mark-bg-color);
+  color: var(--mark-color);
 }
 
 /**
