--- a/assets/sass/search.scss
+++ b/assets/sass/search.scss
@@ -174,8 +174,8 @@ ol.full-search-results {
 }
 
 button {
-  border-color: var(--link-color);
-  color: var(--link-color);
+  border-color: var(--button-color);
+  color: var(--button-color);
   background: var(--callout-color);
   font-weight: bold;
   @include border-radius(3px);
