--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -8,7 +8,7 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   color: var(--font-color);
-  background: #f0efe7 url($baseurl + "images/bg/body.jpg");
+  background: var(--bg-color);
 }
 
 // windows chrome makes a mess of Adelle web font
