dark mode: adjust colors for manual pages' drop-downs
The light mode colors in the versions and the translation drop-down
boxes are waaaay to bright in dark mode.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -298,7 +298,7 @@ a.dropdown-trigger {
   &.active {
     position: relative;
     z-index: 200;
-    background-color: #fff !important;
+    background-color: var(--dropdown-active-bg-color) !important;
     @include border-top-left-radius(3px);
     @include border-top-right-radius(3px);
     border: solid 1px var(--base-border-color-darker-8);
