--- a/assets/sass/reference.scss
+++ b/assets/sass/reference.scss
@@ -131,7 +131,7 @@ h3.plumbing {
     font-size: 11px;
     font-weight: normal;
     color: var(--font-color);
-    background-color: #eae9e0;
+    background-color: var(--versions-footer-bg-color);
     @include border-bottom-left-radius(3px);
     @include border-bottom-right-radius(3px);
 
@@ -285,7 +285,7 @@ ol.reference-previous-versions {
         @include border-bottom-left-radius(10px);
         font-size: 10px;
         font-style: italic;
-        background-color: #f5f5f3;
+        background-color: var(--no-changes-bg-color);
       }
     }
   }
