--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -260,8 +260,13 @@ code {
   line-height: $fixed-width-line-height;
   font-variant-ligatures: none;
   color: var(--orange);
-  background-color: var(--main-bg);
-  border: solid 1px var(--pre-border);
+}
+
+p {
+    .synopsis {
+	@include border-radius(3px);
+	border: solid 1px var(--pre-border);
+    }
 }
 
 // Quotes
