--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -83,7 +83,7 @@
     <div id="content-wrapper">
       <div class="inner">
         {{ partial "site-root.html" . }}
-        {{ partial "footer.html" . }}
+        {{ partialCached "footer.html" . }}
       </div> <!-- .inner -->
     </div> <!-- #content-wrapper -->
   {{ else if (isset .Params "book") }}
@@ -111,7 +111,7 @@
           {{ end }}
         </div>
       </div>
-      {{ partial "footer.html" . }}
+      {{ partialCached "footer.html" . }}
     </div>
   {{ else if (isset .Params "docname") }}
     <div class="inner">
@@ -144,7 +144,7 @@
           </div>
         </div>
       </div>
-      {{ partial "footer.html" . }}
+      {{ partialCached "footer.html" . }}
     </div>
   {{ else }}
     <div class="inner">
@@ -181,7 +181,7 @@
           {{ end }}
         </div>
       </div>
-      {{ partial "footer.html" . }}
+      {{ partialCached "footer.html" . }}
     </div>
   {{ end }}
 
