downloads: update download page URLs
Since the download pages now live in `/downloads`, update the existing
links to save an extra redirect.

--- a/layouts/partials/site-root.html
+++ b/layouts/partials/site-root.html
@@ -50,7 +50,7 @@
         <td nowrap="true"><a href="https://www.kernel.org/pub/software/scm/git/" class="icon older-releases">Tarballs</a></td>
       </tr>
       <tr>
-        <td nowrap="true"><a href="{{ relURL "download/win" }}" class="icon windows" id="alt-link">Windows Build</a></td>
+        <td nowrap="true"><a href="{{ relURL "downloads/win" }}" class="icon windows" id="alt-link">Windows Build</a></td>
         <td nowrap="true"><a href="https://github.com/git/git" class="icon source">Source Code</a></td>
       </tr>
     </table>
