Build: vary cached footer on section
Create a new cached footer for each section set in baseof.html.
This makes sure that pagefind/pagefind-ui.js is included if the
section is "search".

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -181,7 +181,7 @@
           {{ end }}
         </div>
       </div>
-      {{ partialCached "footer.html" . }}
+      {{ partialCached "footer.html" . .Params "section" }}
     </div>
   {{ end }}
 
