--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -117,6 +117,12 @@
           <!-- older manual page versions are less interesting and need to be excluded from the search -->
           {{ $include_in_search := (or (not (isset .Params "docname")) (isset .Params "latest-changes") (isset .Params "lang")) }}
           <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:reference" data-pagefind-meta="category:Reference" data-pagefind-weight="0.05" data-pagefind-body{{ end }}>
+	    {{ if (and (isset .Params "docname") (in .Site.Data.docs_extra.git_project_specific .Params.docname)) }}
+	    <div class="callout">
+	    <h2>This information is specific to the Git project</h2>
+	    <p>Please note that this information is only relevant to you if you plan on <a href="{{ relURL "community#contributing" }}">contributing to the Git project itself</a>. It is in no shape or form required reading for regular Git users.</p>
+	    </div>
+	    {{ end }}
             {{ .Content }}
             {{ $match := findRESubmatch "(?s)>NAME</h2>.*?<p[^>]*>(git-)?([^ ]+)" .Content 1 }}
             {{ if (eq ($match | len) 1) }}
