--- a/layouts/partials/translations.html
+++ b/layouts/partials/translations.html
@@ -17,7 +17,7 @@ This book is available in
     <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "ru") }}">Русский</a>,</td></tr>
     <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "sl") }}">Slovenščina</a>,</td></tr>
     <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "tl") }}">Tagalog</a>,</td></tr>
-    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "uk") }}">Українська</a></td></tr>
+    <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "uk") }}">Українська</a>,</td></tr>
     <tr><td><a href="{{ partial "translated-chapter.html" (dict "ctx" . "lang" "zh") }}">简体中文</a>,</td></tr>
   </table>
 </p>
