dark mode: adjust some border colors
The light mode colors of the borders around e.g. the options of Git
commands in their synopsis are unpleasantly bright in dark mode; Let's
adjust them to be less sore on the eye.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -16,13 +16,17 @@
     $base-border-color:       #d8d7cf;
     $callout-color:           #e9e8e0;
     $highlight-bg-color:      #eee0b5;
+    $pre-border:              #efeee6;
     $black-3:                 #333333;
     $main-bg:                 #fcfcfa;
+    $main-border:             #e2e0d8;
     $bg-color:                #f0efe7 url($baseurl + "images/bg/body.jpg");
     $sidebar-bg-color:        #efefe7;
     $no-changes-bg-color:     #f5f5f3;
     $dropdown-active-bg-color: #fff;
     $versions-footer-bg-color: #eae9e0;
+    $search-border:           #ceccc5;
+    $search-focus-border:     #007175;
 
     @if $mode == dark {
         $orange:                  #d7834f;
@@ -40,13 +44,17 @@
         $base-border-color:       #b3b2a7;
         $callout-color:           #555555;
         $highlight-bg-color:      #47412d;
+        $pre-border:              #494945;
         $black-3:                 #cccccc;
         $main-bg:                 #333333;
+        $main-border:             #5e5e5a;
         $bg-color:                #2a2a2aff;
         $sidebar-bg-color:        #3d3d3a;
         $no-changes-bg-color:     #515150;
         $dropdown-active-bg-color: #515150;
         $versions-footer-bg-color: #1f1f1e;
+        $search-border:           #5e5e5a;
+        $search-focus-border:     #ceccc5;
 
         :root#{$theme} {
             div#masthead {
@@ -141,14 +149,18 @@
         --base-border-color-lighter-10: #{lighten($base-border-color, 10%)};
         --callout-color:                #{$callout-color};
         --highlight-bg-color:           #{$highlight-bg-color};
+        --pre-border:                   #{$pre-border};
 
         --black-3:                      #{$black-3};
         --main-bg:                      #{$main-bg};
+        --main-border:                  #{$main-border};
         --sidebar-bg-color:             #{$sidebar-bg-color};
         --bg-color:                     #{$bg-color};
         --no-changes-bg-color:          #{$no-changes-bg-color};
         --dropdown-active-bg-color:     #{$dropdown-active-bg-color};
         --versions-footer-bg-color:     #{$versions-footer-bg-color};
+        --search-border:                #{$search-border};
+        --search-focus-border:          #{$search-focus-border};
     }
 }
 
