--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -41,7 +41,7 @@ aside {
   padding: 22px;
   margin-bottom: 35px;
   background-color: var(--main-bg);
-  border: solid 1px #e2e0d8;
+  border: solid 1px var(--main-border);
   @include border-radius(5px);
 
   .two-column {
