--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -261,7 +261,7 @@ code {
   font-variant-ligatures: none;
   color: var(--orange);
   background-color: var(--main-bg);
-  border: solid 1px #efeee6;
+  border: solid 1px var(--pre-border);
 }
 
 // Quotes
