--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -36,7 +36,7 @@ code {
 
 pre {
   background-color: var(--main-bg);
-  border: solid 1px #efeee6;
+  border: solid 1px var(--pre-border);
   border-radius: 3px;
   color: var(--orange);
   display: block;
