--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -39,7 +39,7 @@ form#search {
   padding-left: 32px;
   @include background-image-2x($baseurl + "images/icons/search", 17px, 17px, 10px 50%);
   background-color: var(--main-bg) !important;
-  border: solid 1px #ceccc5;
+  border: solid 1px var(--search-border);
   @include border-radius(20px);
   @include box-shadow(inset 0 1px 4px #ddd);
 
@@ -56,7 +56,7 @@ form#search {
   }
 
   &.focus {
-    border-color: #007175;
+    border-color: var(--search-focus-border);
     background-color: var(--main-bg);
   }
 }
