--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -75,6 +75,11 @@
                 filter: brightness(.6) contrast(1.2);
             }
 
+            // the images in the About section would be too dark
+            body#about img:not([alt="Git"]) {
+                filter: brightness(0.9) contrast(0.6) invert(1);
+            }
+
             a.subtle-button {
                 background-image: linear-gradient(#555555, #777777);
                 border-top: solid 1px #333333;
