dark-mode: add an alternative Git logo
This logo differs only in the colors (and in the format: it's an SVG),
designed to work better with dark mode.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -82,8 +82,13 @@
                 }
 
                 ol#about-nav li a {
-                    filter: brightness(0.9);
+                    filter: brightness(0.8);
                 }
+            }
+
+            img[alt="Git"] {
+                filter: unset;
+                content: url(./images/logo.dark-mode.svg);
             }
 
             a.subtle-button {
