dark-mode(about): dim the navigation buttons
They would otherwise stick out, brightness-wise.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -76,8 +76,14 @@
             }
 
             // the images in the About section would be too dark
-            body#about img:not([alt="Git"]) {
-                filter: brightness(0.9) contrast(0.6) invert(1);
+            body#about {
+                img:not([alt="Git"]) {
+                    filter: brightness(0.9) contrast(0.6) invert(1);
+                }
+
+                ol#about-nav li a {
+                    filter: brightness(0.9);
+                }
             }
 
             a.subtle-button {
