--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -329,11 +329,20 @@ footer {
   padding: 20px 0 40px;
   margin-top: 35px;
   clear: both;
-  @include clearfix;
   font-size: 12px;
   line-height: $base-line-height * 0.7;
   color: var(--light-font-color);
   border-top: solid 1px var(--base-border-color);
+
+  &:before {
+    content: "</>";
+    color: var(--light-font-color);
+    float: left;
+    font-family: monospace;
+    font-size: 24px;
+    letter-spacing: -4px;
+    padding: 5px;
+  }
 
   a {
     color: var(--light-font-color-darker-35);
@@ -345,8 +354,6 @@ footer {
 
   .site-source {
     float: left;
-    padding-left: 46px;
-    @include background-image-2x($baseurl + "images/icons/code", 38px, 23px, 0 2px);
   }
 
   .sfc-member {
