dark-mode: don't apply color filter on all images
The image on the /about/data-assurance page looked creepy with the color
filter. And because the image isn't bright anyway, remove the filter
from that image.

Signed-off-by: Toon Claes <toon@iotcl.com>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -77,7 +77,7 @@
 
             // the images in the About section would be too dark
             body#about {
-                img:not([alt="Git"]) {
+                img:not(.no-filter) {
                     filter: brightness(0.9) contrast(0.6) invert(1);
                 }
 
