css: make the header responsive
The icon to toggle between dark and light mode was added recently and
this made laying out the elements in the header hard.

A lot of items in the header have been using `position: absolute`. This
was probably caused by the absolute positioning of the search result
dropdown.

Transition most elements in the header to use flexbox to make
positioning more fluid and require less manual pixel pushing.

Signed-off-by: Toon Claes <toon@iotcl.com>

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -54,13 +54,11 @@ pre {
 
 #dark-mode-button {
     display: none;
-    z-index: 10;
-    position: absolute;
-    top: 6px;
-    right: -50px;
-    width: 35px;
+    width: 28px;
     background-color: transparent;
     text-decoration: none;
+    align-self: center;
+    margin: 5px;
 }
 
 @media (max-width: $default + 100) {
