--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -31,12 +31,10 @@ input, textarea {
 }
 
 form#search {
-  position: absolute;
-  top: 10px;
-  right: 0;
   z-index: 1000;
-  width: 262px;
+  width: 100%;
   padding-left: 32px;
+  margin: 9px;
   @include background-image-2x($baseurl + "images/icons/search", 17px, 17px, 10px 50%);
   background-color: var(--main-bg) !important;
   border: solid 1px var(--search-border);
@@ -63,17 +61,12 @@ form#search {
 // Breakpoint ----------------
 @media (max-width: $default) {
   form#search{
-    @include center-transformX;
-    margin-top: 7px;
-    top: unset;
-    width: 92%;
   }
 }
 
 // Mobile
 @media (max-width: $mobile-m) {
   form#search{
-    width: 84%;
     #search-text {
       padding: 0.3rem 0.1rem;
     }
