--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -110,16 +110,28 @@ aside {
 
 // Header
 header {
-  position: relative;
   padding-bottom: 26px;
   margin-top: 14px;
 
+  display: flex;
+  flex-direction: row;
+
+  div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    &:first-child {
+      flex-grow: 4;
+    }
+  }
+  #logo {
+    display: flex;
+  }
+
   #tagline {
-    position: absolute;
-    top: 11px;
-    left: 120px;
     display: block;
-    margin-top: 1px;
+    margin-left: 8px;
     font-size: 24px;
     line-height: 24px;
     color: var(--light-font-color);
@@ -439,13 +451,11 @@ table.benchmarks {
   .responsive-table { overflow-x: auto; }
   .center img { height: 100%; }
   header{
-      padding-bottom: 2.5rem;
     a, span {
       padding-left: 1rem;
       margin-bottom: 10px ;
     }
   }
-  #home { .inner { > header { padding-bottom: 2rem; } } }
   #content { width: 100%; }
   .inner { width: 100%; }
   #content-wrapper { padding: 0.8rem; }
@@ -485,6 +495,7 @@ table.benchmarks {
       top: 0;
       padding-right: 1rem;
     }
+    flex-direction: column;
   }
   #home { .inner { > header { padding-bottom: 2.5rem; } } }
   #masthead {
