--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -132,7 +132,7 @@ header {
   #tagline {
     display: block;
     margin-left: 8px;
-    font-size: 24px;
+    font-size: clamp(0.8rem, 2vw, 1.3rem);
     line-height: 24px;
     color: var(--light-font-color);
 
@@ -491,9 +491,7 @@ table.benchmarks {
   header {
     padding-bottom: 3rem;
     #tagline {
-      font-size: 0.8rem;
-      top: 0;
-      padding-right: 1rem;
+      font-size: clamp(0.8rem, 3vw, 1.3rem);
     }
     flex-direction: column;
   }
