css: place dark-mode icon next to tagline on mobile
Because it looks better to have the whole width for the search bar on
mobile, move the dark-mode icon above the search bar, next to the
tagline. To achieve this, use CSS grid where we can name the grid-areas
and reposition them within media queries.

Signed-off-by: Toon Claes <toon@iotcl.com>

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -53,24 +53,11 @@ pre {
 }
 
 #dark-mode-button {
+    grid-area: dark;
     display: none;
     width: 28px;
     background-color: transparent;
     text-decoration: none;
     align-self: center;
     margin: 5px;
-}
-
-@media (max-width: $default + 100) {
-    #dark-mode-button {
-        top: 41px;
-        right: 5px;
-    }
-}
-
-@media (max-width: $default) {
-    #dark-mode-button {
-        top: 5px;
-        right: 20px;
-    }
 }
