--- a/assets/sass/search.scss
+++ b/assets/sass/search.scss
@@ -2,6 +2,8 @@
 @import "mixins";
 
 #search-container {
+  grid-area: search;
+  display: flex;
   position: relative;
   width: 300px;
   padding-left: 60px;
@@ -153,10 +155,6 @@ ol.full-search-results {
 @media (max-width: $mobile-m) {
   #search-container {
     width: inherit;
-    margin-left: 15px;
-  }
-  #search-results{
-    margin-top: 4px;
   }
 }
 
