--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -42,7 +42,7 @@ form#search {
   @include box-shadow(inset 0 1px 4px #ddd);
 
   input {
-    width: 100%;
+    width: calc(100% - 10px);
     height: 20px;
     margin-top: 4px;
     margin-bottom: 2px;
