dark-mode: drop the text shadow in search results
In dark mode, those shadows simply do not look good.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -129,6 +129,10 @@
                 background: var(--main-bg);
             }
 
+            #search-results table td.matches :is(a:hover, a.highlight) {
+                text-shadow:unset;
+            }
+
             #reference-version {
                 background-color: #6f6e6954;
             }
