site-root: show forges logos on landing page
Replace the project and company logos by logos of forges that provide
Git hosting.

SVG images are used to properly scale on any screen size. The SVG images
are embedded directly into the HTML. This allows us to use CSS custom
properties (like `var(--logos-1)`) for the colors. Using this method the
colors can easily adapt to dark/light mode.

The SVG images are created in Inkscape. One source file `all.svg` has
all the logos. In this file placeholder colors are used. The placeholder
colors are replaced by `var(--xyz)` by the Hugo rendering pipeline. The
placeholder colors are:

* `#aaaaaa` -> `var(--logos-1)`
* `#999999` -> `var(--logos-2)`
* `#666666` -> `var(--logos-3)`
* `#333333` -> `var(--logos-4)`

These are lightest to darkest in light mode, and reverse in dark mode.

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -28,6 +28,11 @@
     $search-border:           #ceccc5;
     $search-focus-border:     #007175;
 
+    $logos-1: #a6a7a1;
+    $logos-2: #90908b;
+    $logos-3: #767675;
+    $logos-4: #696c69;
+
     @if $mode == dark {
         $orange:                  #d7834f;
         $blue:                    #007a7e;
@@ -55,6 +60,11 @@
         $versions-footer-bg-color: #1f1f1e;
         $search-border:           #5e5e5a;
         $search-focus-border:     #ceccc5;
+
+        $logos-1: #696c69;
+        $logos-2: #767675;
+        $logos-3: #90908b;
+        $logos-4: #a6a7a1;
 
         :root#{$theme} {
             div#masthead {
@@ -181,6 +191,11 @@
         --versions-footer-bg-color:     #{$versions-footer-bg-color};
         --search-border:                #{$search-border};
         --search-focus-border:          #{$search-focus-border};
+
+        --logos-1: #{$logos-1};
+        --logos-2: #{$logos-2};
+        --logos-3: #{$logos-3};
+        --logos-4: #{$logos-4};
     }
 }
 
