--- a/layouts/partials/site-root.html
+++ b/layouts/partials/site-root.html
@@ -58,22 +58,13 @@
 </div>
 
 <section id="companies-projects">
-  <h3 class="text-center"> Companies &amp; Projects Using Git </h3>
+  <h3 class="text-center">Products providing Git hosting</h3>
   <ul>
-    <li><a href="https://github.com/google" class="google">Google</a></li>
-    <li><a href="https://github.com/Microsoft" class="microsoft">Microsoft</a></li>
-    <li><a href="https://github.com/linkedin" class="linked-in">LinkedIn</a></li>
-    <li><a href="https://github.com/netflix" class="netflix">Netflix</a></li>
-    <li><a href="https://perl5.git.perl.org/perl.git" class="perl">Perl</a></li>
-    <li><a href="https://git.postgresql.org/gitweb/" class="postgresql">PostgreSQL</a></li>
-
-    <li><a href="https://android-review.googlesource.com/#/q/status:open,n,z" class="android">Android</a></li>
-    <li><a href="https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git" class="linux">Linux</a></li>
-    <li><a href="https://github.com/rails/rails" class="rails">Ruby on Rails</a></li>
-    <li><a href="https://code.qt.io/cgit/" class="qt">Qt</a></li>
-    <li><a href="https://gitlab.gnome.org/GNOME" class="gnome">Gnome</a></li>
-    <li><a href="https://git.eclipse.org/c/" class="eclipse">Eclipse</a></li>
-    <li><a href="https://invent.kde.org/explore/groups" class="kde">KDE</a></li>
-    <li><a href="https://cgit.freedesktop.org/xorg/xserver/" class="x">X</a></li>
-</ul>
+    <li><a href="https://gitlab.com">{{ partial "company-svg" "company-project-logos/gitlab" }}</a></li>
+    <li><a href="https://github.com">{{ partial "company-svg" "company-project-logos/github" }}</a></li>
+    <li><a href="https://forgejo.org">{{ partial "company-svg" "company-project-logos/forgejo" }}</a></li>
+    <li><a href="https://codeberg.org">{{ partial "company-svg" "company-project-logos/codeberg" }}</a></li>
+    <li><a href="https://sourcehut.org">{{ partial "company-svg" "company-project-logos/sourcehut" }}</a></li>
+    <li><a href="https://gitea.com">{{ partial "company-svg" "company-project-logos/gitea" }}</a></li>
+  </ul>
 </section>
