Celebrate the 20th birthday of Git
The first commit of Git, ever, was performed on Thu, 7 Apr 2005 15:13:13
-0700 and it is kind of constitutes the birth of Git itself, see:
https://web.git.kernel.org/pub/scm/git/git.git/commit/?id=e83c5163316f89bfbde7d9ab23ca2e25604af290

This means that April 7th, 2025 is the 20th birthday of Git. Let's
celebrate that by (temporarily!) changing the Git logo on Git's home
page in a subtle way.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -28,6 +28,7 @@ $baseurl: "{{ .Site.BaseURL }}{{ if (and (ne .Site.BaseURL "/") (ne .Site.BaseUR
 @import 'lists';
 @import 'about';
 @import 'dark-mode';
+@import 'git-turns-20';
 
 code {
   display: inline;
