--- a/layouts/partials/site-root.html
+++ b/layouts/partials/site-root.html
@@ -60,11 +60,19 @@
 <section id="companies-projects">
   <h3 class="text-center">Products providing Git hosting</h3>
   <ul>
-    <li><a href="https://gitlab.com">{{ partial "company-svg" "company-project-logos/gitlab" }}</a></li>
-    <li><a href="https://github.com">{{ partial "company-svg" "company-project-logos/github" }}</a></li>
-    <li><a href="https://forgejo.org">{{ partial "company-svg" "company-project-logos/forgejo" }}</a></li>
-    <li><a href="https://codeberg.org">{{ partial "company-svg" "company-project-logos/codeberg" }}</a></li>
-    <li><a href="https://sourcehut.org">{{ partial "company-svg" "company-project-logos/sourcehut" }}</a></li>
-    <li><a href="https://gitea.com">{{ partial "company-svg" "company-project-logos/gitea" }}</a></li>
+    {{ $m := slice
+    (dict "name" "gitlab" "url" "https://gitlab.com")
+    (dict "name" "github" "url" "https://github.com")
+    (dict "name" "forgejo" "url" "https://forgejo.org")
+    (dict "name" "codeberg" "url" "https://codeberg.org")
+    (dict "name" "sourcehut" "url" "https://sourcehut.org")
+    (dict "name" "gitea" "url" "https://gitea.com")
+    }}
+    {{ range shuffle $m }}
+    <li><a href="{{ .url }}">{{ partial "company-svg" (printf "company-project-logos/%s" .name) }}</a></li>
+    {{ end }}
   </ul>
+  <script type="text/javascript">
+    document.getElementById("companies-projects").style.setProperty("--seed", Math.floor(Math.random() * 1000));
+  </script>
 </section>
