site-root: tweak the positioning of the logos
Because Inkscape doesn't export layers in their full document size[1],
add a transparent `bg` rectangle to each layer so we can position the
logo inside that box.

This change needs less margin around the images.

[1]: https://inkscape.org/forums/extensions/feature-request-batch-export-layers-to-size-of-document/

--- a/assets/sass/front-page.scss
+++ b/assets/sass/front-page.scss
@@ -223,7 +223,7 @@ $monitor-height: 271px;
     justify-items: center;
 
     li {
-      margin: 1em 2em;
+      margin: 0 1em;
 
       $num: 11;
       $prime: 97;
