dark-mode: allow following the system preference again
After toggling dark mode on and off again, a subsequent change of the
system preference to dark mode will not respected because the toggling
stored the user's preference.

Let's store the user preference only when it differs from the user's
choice. That way, in the scenario above the system preference would be
followed again.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -49,7 +49,8 @@
     if (currentTheme) {
       // Check dark mode preference at the OS level
       const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)").matches
-      if ((prefersDarkScheme && currentTheme === "light")
+      if (prefersDarkScheme === (currentTheme === "dark")) localStorage.removeItem("theme")
+      else if ((prefersDarkScheme && currentTheme === "light")
         || (!prefersDarkScheme && currentTheme === "dark")) {
 	document.documentElement.dataset.theme = currentTheme
       }
