book: render the Persian translation right-to-left
The Persian translation needs to be rendered right-to-left, as suggested
in https://github.com/progit/progit2-fa/pull/1#issuecomment-2816624433.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/book.scss
+++ b/assets/sass/book.scss
@@ -156,6 +156,10 @@ ol.book-toc {
   margin: -20px 40px 0 40px;
 }
 
+#content[dir="rtl"] .book-wrapper {
+  float: left;
+}
+
 @media (min-width: $mobile-m) {
   .book-toc {
     width: 60%
