Add same font-family on synopsis as on code
This makes sure that spaces inserted between 'code' elements
have the same size as text inside of 'code' elements, otherwise
spaces look tiny and words in commands such as 'git merge'
visually look almost touching each other.

--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -265,6 +265,7 @@ code {
 p {
     .synopsis {
 	@include border-radius(3px);
+	font-family: $fixed-width-font-family;
 	border: solid 1px var(--pre-border);
     }
 }
